- Added bidirectional escape for invalid FAT characters in nand emulation.
- Now FAT_GetUsage returns fake values for WiiWare/VirtualConsole and real 
  values taken from FAT for disc-based Wii games. This workaround has proven 
  to improve nand emulation compatibility. 
- Added a thread to make the drive led blink when writing to FAT.
- Minor changes and code clean up.


[ d2x v6 ]

- Added fraglist to support potentially any file system (tnx oggzee).
- Added support in fraglist for sector size up to 4K (typically required
  for hard drives greater than 2TB).
- Fixed a compatibility issue with libfat/libntfs in EHCI module.


[ d2x v5 ]

- Added USB/SD support for games affected by ios reload. Currently only WBFS
  partitions are supported (tnx WiiPower for your help).
- Fixed dual layer detection for games like Sakura Wars.
- Fixed GameCube audio streaming command for retail discs (tnx WiiPower).
- Added missing patches for base ios 53 and 55 in ES module. 
- Minor changes and code clean up.


[ d2x v4 ]

- Fixed error 002 in method 2 for blocking ios reload.
- Repeated ios reload are now supported by method 2.
- Added support to reload any ios, not only 249.
- Added "return to channel" feature compatible with all games out there.
- Fixed a bug in nand emulation to properly support HDD greater than 1TB.
- Added support for sector size up to 4KB (typically required for hard drives
  greater than 2TB).
- Removed file logging introduced in v3 since has proved harmful to games like
  LostWinds and LostWinds Winter of the Melodies.
- Updated FatFs to 0.8b. This allowed us to remove the workaround on file 
  renaming introduced in d2x v3.
- Fixed a potential buffer overflow while reading a directory.
- Fixed the error code returned by FAT_Readdir when the requested folder is
  an existing file (now all Strong Bad episodes are working properly).
- Fixed a bug in FAT_GetStats (now games like Max & the Magic Marker,